--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>DevThon 2026 | DevUp Society</title>
+    <meta
+      name="description"
+      content="DevThon - The Ultimate Hackathon by DevUp Society. Browse real-world problem statements and build innovative solutions."
+    />
+    <meta name="author" content="DevUp Society" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="DevThon 2026 | DevUp Society" />
+    <meta
+      property="og:description"
+      content="DevThon - The Ultimate Hackathon by DevUp Society. Browse real-world problem statements and build innovative solutions."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@DevUpSociety" />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
